In i3, by default, dialogue, utility, toolbar, and splash windows float.
The pinentry prompt for a passcode does correctly float, but if the card is not inserted the prompt to insert it tiles.
Arch; i3wm; pinentry 1.0.0-1
In i3, by default, dialogue, utility, toolbar, and splash windows float.
The pinentry prompt for a passcode does correctly float, but if the card is not inserted the prompt to insert it tiles.
Arch; i3wm; pinentry 1.0.0-1
| rP Pinentry | |||
| rP2b1fb2f30a94 gtk: Really always set the window as transient. | |||
| rPf69dadc6ccea gtk: Always set the window as transient. | |||
I am not sure I understand your question. In any case you need to tell us whcih pinentry flavour you ar using (gpt, qt, curses, gnome, etc...
Running gpg with -v shows you such info.
Oops, sorry, GTK.
To be clear: the dialogue should be a floating window, and it is when actually promoting for a pin entry, but not when alerting to the absence of a PGP card.
I believe this is user configurable, but the i3 has sensible defaults if the window type is also sensibly set.
The gnome3 variant behaves correctly (floats rather than tiles) in both cases.
I can confirm this behavior with the latest pinentry-gtk-2 under the Awesome window manager.
When in tiling mode, any pinentry dialog prompting for a password is a floating window as expected, but any pinentry dialog merely displaying a message (resulting from a CONFIRM or MESSAGE command) is treated by the window manager as a "main" window and gets tiled instead of floating.
This is seemingly due to the make_transient callback being set only when we're not in confirm_mode. If I try to set the callback in all cases, the dialog is always correctly floating whether we ask for a passphrase or not.