gtk: Always set the window as transient.

* gtk+-2/pinentry-gtk-2.c (create_window): Setup the make_transient
callback whether we ask for a passphrase or not.
--

Making the window transient seems necessary for (at least some)
tiling window managers to make sure the dialog is floating.

GnuPG-bug-id: 3253
Signed-off-by: Damien Goutte-Gattat <dgouttegattat@incenp.org>